istio/gateway-jwt-authorization/virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx
  namespace: istio-test-jwt
spec:
  hosts:
  - "*"
  gateways:
  - istio-system/gateway-for-jwt
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: nginx
